gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-fundamental.rs
#[fundamental] // { dg-error ".E0658." "" { target *-*-* } }
struct Fundamental;

fn main() { }

